# Metrock

./: .gitignore  .lock-waf_linux2_build  CMakeLists.txt  README.md  appinfo.json  package.json  wscript
build_scripts/: generate-locales.js  generate-schemes.js
build_scripts/locales/: en_US.json  ru_RU.json
src/: Autogen.c  Autogen.h  Dither.c  Dither.h  FBDraw.c  FBDraw.h  MainWindow.c  MainWindow.h  PathFinder.c  PathFinder.h  PathWindow.c  PathWindow.h  StationSelectWindow.c  StationSelectWindow.h  Util.c  Util.h  main.c  main.c~
src/c/: FBDraw.c  FossilDelta.c  FossilDelta.h  Locales.c  Locales.h  MainWindow.c  MainWindow.h  Messaging.c  Messaging.h  MsgPack.c  MsgPack.h  PathFinder.c  PathFinder.h  PathWindow.c  PathWindow.h  Settings.c  Settings.h  StationSelectWindow.c  StationSelectWindow.h  Structs.c  Structs.h  UpdateWindow.c  UpdateWindow.h  Util.c  Util.h  main.c
src/pkjs/: fossil-delta.js  index.js  msgpack.js  scheme-minifier.js  xml-parser.js
src/pkjs/config/: config.js
src/pkjs/config/locales/: en_US.json  ru_RU.json
src/pkjs/schemes/: kharkiv.json  kiev.json  minsk.json  moscow.json  spb.json
src/pkjs/schemes/locales/: kharkiv_en.json  kharkiv_ru.json  kharkiv_ukr.json  kiev_en.json  kiev_ru.json  kiev_ukr.json  minsk_bel.json  minsk_en.json  minsk_ru.json  moscow_en.json  moscow_ru.json  spb_en.json  spb_ru.json
